--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <div className="min-h-screen w-full bg-gray-50 text-gray-900 p-6">
           <div className="max-w-7xl mx-auto space-y-6">
             <div className="flex items-center justify-between">
-              <h1 className="text-2xl font-bold">รายงานสรุปยอดขายสินค้า</h1>
+              <h1 className="text-2xl font-bold">สรุปเก็บเงินปลายทาง (COD) จาก Google Sheets</h1>
               <div className="flex items-center gap-2">
                 <button onClick={fetchData} className="px-3 py-2 rounded-xl bg-gray-900 text-white text-sm hover:opacity-90">
                   รีเฟรชข้อมูล
